--- a/AcLogTrek/AcLogTrek/app.config
+++ b/AcLogTrek/AcLogTrek/app.config
@@ -2,11 +2,56 @@
 <configuration>
 	<configSections>
 		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="SharepntTestHost.Properties.Settings" allowExeDefinition="MachineToLocalUser" requirePermission="false" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+			<section name="AclTrek.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+   <section name="SharepntTestHost.Properties.Settings" allowExeDefinition="MachineToLocalUser" requirePermission="false" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
 		</sectionGroup>
 	</configSections>
 	<userSettings>
-		<SharepntTestHost.Properties.Settings>
+		<AclTrek.Properties.Settings>
+   <setting name="LogFilePath" serializeAs="String">
+    <value>Set in log4net.config</value>
+   </setting>
+   <setting name="AccessMdbPath1" serializeAs="String">
+    <value>C:\Users\fred\Dropbox\HamLog\LogData.mdb</value>
+   </setting>
+   <setting name="AccessMdbPath2" serializeAs="String">
+    <value>C:\FW\Printpack\COI\Db\Access\Mdb\COI_Admin_DB.mdb</value>
+   </setting>
+   <setting name="AccessMdbPath3" serializeAs="String">
+    <value>C:\Work\PPK\Data\COI_Admin_DB.mdb</value>
+   </setting>
+   <setting name="SqlServerName1" serializeAs="String">
+    <value>fredwebs.database.windows.net</value>
+   </setting>
+   <setting name="SqlServerName2" serializeAs="String">
+    <value>MERCURY\MERCURY</value>
+   </setting>
+   <setting name="SqlServerName3" serializeAs="String">
+    <value>ppksql3dv</value>
+   </setting>
+   <setting name="SqlDbName1" serializeAs="String">
+    <value>AmateurContactLog</value>
+   </setting>
+   <setting name="SqlDbName2" serializeAs="String">
+    <value>COI_Sharepoint</value>
+   </setting>
+   <setting name="SqlDbName3" serializeAs="String">
+    <value>COI_Test</value>
+   </setting>
+   <setting name="AccessMdbUserName" serializeAs="String">
+    <value>pp_nt\fpeters</value>
+   </setting>
+   <setting name="AccessMdbUserPW" serializeAs="String">
+    <value>Password1</value>
+   </setting>
+   <setting name="WindowsUserName" serializeAs="String">
+    <value>pp_nt\fpeters</value>
+   </setting>
+   <setting name="WindowsUserPW" serializeAs="String">
+    <value>Password1</value>
+   </setting>
+  </AclTrek.Properties.Settings>
+  <SharepntTestHost.Properties.Settings>
    <setting name="LogFilePath" serializeAs="String">
     <value>Set in log4net.config</value>
    </setting>
@@ -54,6 +99,6 @@
 	<appSettings>
 	</appSettings>
 	<startup>
-		<supportedRuntime sku=".NETFramework,Version=v4.0" version="v4.0" />
+		<supportedRuntime sku=".NETFramework,Version=v4.7.2" version="v4.0"/>
 	</startup>
 </configuration>
