--- a/AcLogTrek/AcLogTrek/app.config
+++ b/AcLogTrek/AcLogTrek/app.config
@@ -15,40 +15,43 @@
     <value>C:\Users\fred\Dropbox\HamLog\LogData.mdb</value>
    </setting>
    <setting name="AccessMdbPath2" serializeAs="String">
-    <value>C:\FW\Printpack\COI\Db\Access\Mdb\COI_Admin_DB.mdb</value>
+    <value>---</value>
    </setting>
    <setting name="AccessMdbPath3" serializeAs="String">
-    <value>C:\Work\PPK\Data\COI_Admin_DB.mdb</value>
+    <value>---</value>
    </setting>
    <setting name="SqlServerName1" serializeAs="String">
-    <value>fredwebs.database.windows.net</value>
+    <value>SsName1EnvVariable</value>
    </setting>
    <setting name="SqlServerName2" serializeAs="String">
-    <value>MERCURY\MERCURY</value>
+    <value>SsName2EnvVariable</value>
    </setting>
    <setting name="SqlServerName3" serializeAs="String">
-    <value>ppksql3dv</value>
+    <value>SsName3EnvVariable</value>
    </setting>
    <setting name="SqlDbName1" serializeAs="String">
     <value>AmateurContactLog</value>
    </setting>
    <setting name="SqlDbName2" serializeAs="String">
-    <value>COI_Sharepoint</value>
+    <value>AmateurContactLog</value>
    </setting>
    <setting name="SqlDbName3" serializeAs="String">
-    <value>COI_Test</value>
+    <value>AmateurContactLog</value>
    </setting>
    <setting name="AccessMdbUserName" serializeAs="String">
-    <value>pp_nt\fpeters</value>
+    <value>---</value>
    </setting>
    <setting name="AccessMdbUserPW" serializeAs="String">
-    <value>Password1</value>
+    <value>---</value>
    </setting>
    <setting name="WindowsUserName" serializeAs="String">
-    <value>pp_nt\fpeters</value>
+    <value>winuser</value>
    </setting>
    <setting name="WindowsUserPW" serializeAs="String">
-    <value>Password1</value>
+    <value>winpwd</value>
+   </setting>
+   <setting name="SqlDbUserName1" serializeAs="String">
+    <value>SqlDbUserName</value>
    </setting>
   </AclTrek.Properties.Settings>
   <SharepntTestHost.Properties.Settings>
