Changing to Json Settings.

--- a/AcLogTrek/AcLogTrek/log4net.config
+++ b/AcLogTrek/AcLogTrek/log4net.config
@@ -5,7 +5,7 @@
 		<appender-ref ref="UdpAppender" />
 	</root>
 	<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
-	  <param name="File" value="C:\Users\fpeters\log\AcLogTrek.log" />
+	  <param name="File" value="C:\Log\AcLog\AcLogTrek.log" />
 	  <param name="AppendToFile" value="true" />
 		<maximumFileSize value="100KB" />
 		<maxSizeRollBackups value="10" />
