--- a/AcLogTrek/AcLogTrek/AcLogTrek.csproj
+++ b/AcLogTrek/AcLogTrek/AcLogTrek.csproj
@@ -59,6 +59,9 @@
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core">
@@ -87,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcLogService.cs" />
+    <Compile Include="AcLogSettings.cs" />
     <Compile Include="FolderBrowser.cs" />
     <Compile Include="FormHelper.cs" />
     <Compile Include="Log4Form.cs" />
