--- a/AcLogTrek/AcLogTrek/AcLogTrek.csproj
+++ b/AcLogTrek/AcLogTrek/AcLogTrek.csproj
@@ -116,6 +116,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="AcLogSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
